tests/ui/span/E0805.stderr
error[E0805]: malformed `cfg` macro input
  --> $DIR/E0805.rs:2:8
   |
LL |     if cfg!(not()) { }
   |        ^^^^^^^^--^
   |                |
   |                expected an argument here
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/conditional-compilation.html#the-cfg-attribute>
help: must be of the form
   |
LL -     if cfg!(not()) { }
LL +     if cfg!(predicate) { }
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0805`.
